<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="20dp"
        android:text="@string/nyc_pizza_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/typeSpinner"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="375dp"
        android:layout_height="25dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="367dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeSpinner">

        <RadioButton
            android:id="@+id/smallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/mediumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/largeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/large" />
    </RadioGroup>

    <EditText
        android:id="@+id/crustLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="182dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/crust"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/availableLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/topping_options"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/availableToppingsListView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chosenLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:text="@string/selected_toppings"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chosenToppingsListView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/availableToppingsListView"
        android:layout_width="164dp"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintEnd_toStartOf="@+id/chosenToppingsListView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crustLabel" />

    <ListView
        android:id="@+id/chosenToppingsListView"
        android:layout_width="164dp"
        android:layout_height="240dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="29dp"
        app:layout_constraintStart_toEndOf="@+id/availableToppingsListView"
        app:layout_constraintTop_toBottomOf="@+id/crustLabel" />

    <Button
        android:id="@+id/selectToppingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="22dp"
        android:text="@string/add_topping"
        app:layout_constraintBottom_toTopOf="@+id/addToOrderButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableToppingsListView" />

    <Button
        android:id="@+id/removeToppingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="22dp"
        android:text="@string/remove_topping"
        app:layout_constraintBottom_toTopOf="@+id/addToOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosenToppingsListView" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="66dp"
        android:layout_height="59dp"
        android:layout_marginStart="329dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="99dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/typeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homebutton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="109dp"
        android:layout_height="124dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/typeSpinner"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/newyorkpizzaicon" />
</androidx.constraintlayout.widget.ConstraintLayout>